--- a/Views/Product/Detail.cshtml
+++ b/Views/Product/Detail.cshtml
@@ -5,6 +5,10 @@
 	<link href="~/css/product_page.css" rel="stylesheet">
 }
 
+@section Scripts {
+	<script src="~/js/carousel_with_thumbs.js"></script>
+}
+
 <main>
 	    <div class="container margin_30">
 	        <div class="countdown_inner">-20% This offer ends in <div data-countdown="2019/05/15" class="countdown"></div>
@@ -14,24 +18,24 @@
 	                <div class="all">
 	                    <div class="slider">
 	                        <div class="owl-carousel owl-theme main">
-	                            <div style="background-image: url(img/products/shoes/1.jpg);" class="item-box"></div>
-	                            <div style="background-image: url(img/products/shoes/2.jpg);" class="item-box"></div>
-	                            <div style="background-image: url(img/products/shoes/3.jpg);" class="item-box"></div>
-	                            <div style="background-image: url(img/products/shoes/4.jpg);" class="item-box"></div>
-	                            <div style="background-image: url(img/products/shoes/5.jpg);" class="item-box"></div>
-	                            <div style="background-image: url(img/products/shoes/6.jpg);" class="item-box"></div>
+							<div style="background-image: url('@Url.Content("~/img/products/shoes/1.jpg")')" class="item-box"></div>
+							<div style="background-image: url('@Url.Content("~/img/products/shoes/2.jpg")')" class="item-box"></div>
+							<div style="background-image: url('@Url.Content("~/img/products/shoes/3.jpg")')" class="item-box"></div>
+							<div style="background-image: url('@Url.Content("~/img/products/shoes/4.jpg")')" class="item-box"></div>
+							<div style="background-image: url('@Url.Content("~/img/products/shoes/5.jpg")')" class="item-box"></div>
+							<div style="background-image: url('@Url.Content("~/img/products/shoes/6.jpg")')" class="item-box"></div>
 	                        </div>
 	                        <div class="left nonl"><i class="ti-angle-left"></i></div>
 	                        <div class="right"><i class="ti-angle-right"></i></div>
 	                    </div>
 	                    <div class="slider-two">
 	                        <div class="owl-carousel owl-theme thumbs">
-	                            <div style="background-image: url(img/products/shoes/1.jpg);" class="item active"></div>
-	                            <div style="background-image: url(img/products/shoes/2.jpg);" class="item"></div>
-	                            <div style="background-image: url(img/products/shoes/3.jpg);" class="item"></div>
-	                            <div style="background-image: url(img/products/shoes/4.jpg);" class="item"></div>
-	                            <div style="background-image: url(img/products/shoes/5.jpg);" class="item"></div>
-	                            <div style="background-image: url(img/products/shoes/6.jpg);" class="item"></div>
+							<div style="background-image: url('@Url.Content("~/img/products/shoes/1.jpg")')" class="item active"></div>
+							<div style="background-image: url('@Url.Content("~/img/products/shoes/2.jpg")')" class="item"></div>
+							<div style="background-image: url('@Url.Content("~/img/products/shoes/3.jpg")')" class="item"></div>
+							<div style="background-image: url('@Url.Content("~/img/products/shoes/4.jpg")')" class="item"></div>
+							<div style="background-image: url('@Url.Content("~/img/products/shoes/5.jpg")')" class="item"></div>
+							<div style="background-image: url('@Url.Content("~/img/products/shoes/6.jpg")')" class="item"></div>
 	                        </div>
 	                        <div class="left-t nonl-t"></div>
 	                        <div class="right-t"></div>
@@ -257,7 +261,7 @@
 	                    <span class="ribbon new">New</span>
 	                    <figure>
 	                        <a href="product-detail-1.html">
-	                            <img class="owl-lazy" src="img/products/product_placeholder_square_medium.jpg" data-src="img/products/shoes/4.jpg" alt="">
+	                            <img src="~/img/products/product_placeholder_square_medium.jpg" alt="">
 	                        </a>
 	                    </figure>
 	                    <div class="rating"><i class="icon-star voted"></i><i class="icon-star voted"></i><i class="icon-star voted"></i><i class="icon-star voted"></i><i class="icon-star"></i></div>
