--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -13,7 +13,7 @@
 <main>
 	<div id="carousel-home">
 		<div class="owl-carousel owl-theme">
-			<div class="owl-slide cover" style="background-image: url(~/img/slides/slide_home_1.jpg);">
+			<div class="owl-slide cover" style="background-image: url(img/slides/slide_home_2.jpg);">
 				<div class="opacity-mask d-flex align-items-center" data-opacity-mask="rgba(0, 0, 0, 0.5)">
 					<div class="container">
 						<div class="row justify-content-center justify-content-md-end">
@@ -31,7 +31,7 @@
 				</div>
 			</div>
 			<!--/owl-slide-->
-			<div class="owl-slide cover" style="background-image: url(~/img/slides/slide_home_2.jpg);">
+			<div class="owl-slide cover" style="background-image: url(img/slides/slide_home_1.jpg);">
 				<div class="opacity-mask d-flex align-items-center" data-opacity-mask="rgba(0, 0, 0, 0.5)">
 					<div class="container">
 						<div class="row justify-content-center justify-content-md-start">
@@ -49,7 +49,7 @@
 				</div>
 			</div>
 			<!--/owl-slide-->
-			<div class="owl-slide cover" style="background-image: url(~/img/slides/slide_home_3.jpg);">
+			<div class="owl-slide cover" style="background-image: url(img/slides/slide_home_3.jpg);">
 				<div class="opacity-mask d-flex align-items-center" data-opacity-mask="rgba(255, 255, 255, 0.5)">
 					<div class="container">
 						<div class="row justify-content-center justify-content-md-start">
