--- a/Areas/Admin/Views/Blogs/Create.cshtml
+++ b/Areas/Admin/Views/Blogs/Create.cshtml
@@ -56,25 +56,25 @@
             <h3 class="block-header-default" style="margin:10px">Add Post</h3>
         </div>
         <div class="col-8" style="width:100%;padding:10px 100px">
-            <div class="col-10 form-group" >
+            <div class="form-group" >
                 <label class="form-label" asp-for="Image">Image</label>
                 <input type="file" id="thumbnail" asp-for="Image" class="form-control" accept="image/*" />
                 <img id="imagePreview" style="display:none; width: 400px; height: 350px; margin:10px 60px " />
             </div>
 
-            <div class="col-10 form-group">
+            <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
                 <input asp-for="Name" class="form-control" id="blog-name" />
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
 
-            <div class="col-10  form-group">
+            <div class="form-group">
                 <label asp-for="Slug" class="control-label"></label>
                 <input asp-for="Slug" class="form-control" id="blog-slug" />
                 <span asp-validation-for="Slug" class="text-danger"></span>
             </div>
 
-            <div class="col-10 form-group">
+            <div class="form-group">
                 <label class="form-label" asp-for="TopicId">Topic</label>
                 <select class="js-select2 form-select" id="topic-id" asp-for="TopicId" style="width: 100%;" data-placeholder="Choose topic..">
                     <option></option>
@@ -86,11 +86,17 @@
                 </select>
             </div>
 
-            <div class="col-10 form group">
+            <div class="form group">
                 <label class="form-label">Content</label>
                 <textarea id="js-ckeditor"></textarea>
             </div>
-            <div class="mb-4 form-group" style="display:flex;justify-content:end;padding:10px 100px">
+            <div class="form-group" style="display:flex;justify-content:end;padding:10px 30px">
+                <div class="form-check form-check form-switch">
+                    <input asp-for="IsPublic" class="form-check-input" type="checkbox" id="flexSwitchCheckDefault" />
+                </div>
+                <label asp-for="IsPublic" class="control-label"></label>
+            </div>
+            <div class="mb-4 form-group" style="display:flex;justify-content:end;padding:10px 10px">
                 <button type="button" class="btn btn-danger" style="margin:10px"> <a asp-action="Index" style="color:white">Back to List</a></button>
                 <button type="submit" value="Create" id="btn-add-blog" class="btn btn-primary" style="margin:10px">Create Post</button>
             </div>
