--- a/Areas/Admin/Views/Blogs/Edit.cshtml
+++ b/Areas/Admin/Views/Blogs/Edit.cshtml
@@ -49,7 +49,7 @@
         <div class="col-8" style="width:100%;padding:10px 100px">
             <div class="form-group" >
                 <label class="form-label" asp-for="Image">Image</label>
-                <input type="file" id="thumbnail" asp-for="Image" class="form-control" accept="image/*" />
+                <input type="file" id="thumbnail" class="form-control" accept="image/*" />
                 <img id="imagePreview" style="display:block; width: 400px; height: 350px; margin:10px 60px" src="~/img/blogs/@Model.Thumbnail.Name" />
             </div>
 
@@ -77,7 +77,6 @@
             <div class="form-group">
                 <label asp-for="TopicId" class="control-label">Chủ đề</label>
                  <select asp-for="TopicId" class="form-control" asp-items="ViewBag.TopicId"></select>
-                
                 <span asp-validation-for="TopicId" class="text-danger"></span>
             </div>
 
@@ -86,12 +85,19 @@
                 <textarea id="js-ckeditor" asp-for="Content" class="form-control"></textarea>
                 <span asp-validation-for="Content" class="text-danger"></span>
             </div>
+            
+            <div class="form-group" style="display:flex;justify-content:end;padding:10px 30px">
+                <div class="form-check form-check form-switch">
+                    <input asp-for="IsPublic" class="form-check-input" type="checkbox" id="flexSwitchCheckDefault" />
+                </div>
+                <label asp-for="IsPublic" class="control-label"></label>
+            </div>
+
+            
             <div class="mb-4 form-group" style="display:flex;justify-content:end;padding:10px 20px">
                 <button type="button" class="btn btn-danger" style="margin:10px"> <a asp-action="Index" style="color:white">Back to List</a></button>
                 <button type="submit" value="Create" id="btn-add-blog" class="btn btn-primary" style="width:100px;margin:10px">Save</button>
             </div>
-
-
         </div>
     </div>
 </form>
