--- a/Areas/Admin/Views/Blogs/Create.cshtml
+++ b/Areas/Admin/Views/Blogs/Create.cshtml
@@ -13,9 +13,11 @@
     <script src="~/admin/js/plugins/ckeditor/ckeditor.js"></script>
     <script src="~/admin/js/plugins/jquery-validation/jquery.validate.min.js"></script>
     <script src="~/admin/js/plugins/jquery-validation/additional-methods.js"></script>
-    <script>Dashmix.helpersOnLoad(['jq-select2', 'js-ckeditor']);</script>
-    <script src="~/admin//js/blog/add-blog.js"></script>
     <script>
+        Dashmix.onLoad(function () {
+            CKEDITOR.config.height = '400';
+            Dashmix.helpers(['js-ckeditor', 'jq-select2']);
+        });
         $(document).ready(function () {
             $('#blog-form').submit(function (e) {
                 e.preventDefault();
@@ -24,11 +26,6 @@
 
                 formData.append('Content', CKEDITOR.instances['js-ckeditor'].getData());
 
-                for (let [key, value] of formData.entries()) {
-                    console.log(`${key}: ${value}`);
-                }
-
-                // AJAX request to submit form
                 $.ajax({
                     url: '/Admin/Blogs/Create',
                     type: 'POST',
@@ -44,64 +41,88 @@
                 });
             });
         });
+        document.getElementById('thumbnail').addEventListener('change', function (e) {
+            var previewImage = document.getElementById('imagePreview');
+            var fileInput = e.target;
 
+            if (fileInput.files && fileInput.files[0]) {
+                var reader = new FileReader();
+
+                reader.onload = function (e) {
+                    previewImage.src = e.target.result;
+                    previewImage.style.display = 'block';
+                };
+                reader.readAsDataURL(fileInput.files[0]);
+            }
+        });
     </script>
 }
-
-
-<form asp-action="Create" id="blog-form" enctype="multipart/form-data">
-    <div asp-validation-summary="All" class="text-danger"></div>
-    <div class="col-8" style="background-color:white;display:block; margin:10px 250px">
-        <div class="block-header block-header-default" style="width:100%">
-            <h3 class="block-header-default" style="margin:10px">Add Post</h3>
-        </div>
-        <div class="col-8" style="width:100%;padding:10px 100px">
-            <div class="form-group" >
-                <label class="form-label" asp-for="Image">Image</label>
-                <input type="file" id="thumbnail" asp-for="Image" class="form-control" accept="image/*" />
-                <img id="imagePreview" style="display:none; width: 400px; height: 350px; margin:10px 60px " />
+<form class="row g-0 flex-md-grow-1" id="blog-form" method="POST" onsubmit="return false;">
+    <div class="col-md-4 col-lg-5 col-xl-3 order-md-1 bg-body-extra-light">
+        <div class="content p-0 m-0">
+            <!-- Toggle Settings -->
+            <div class="d-md-none p-3">
+                <!-- Class Toggle, functionality initialized in Helpers.dmToggleClass() -->
+                <button type="button" class="btn w-100 btn-alt-info" data-toggle="class-toggle" data-target="#side-content" data-class="d-none">
+                    Settings
+                </button>
             </div>
-
-            <div class="form-group">
-                <label asp-for="Name" class="control-label"></label>
-                <input asp-for="Name" class="form-control" id="blog-name" />
-                <span asp-validation-for="Name" class="text-danger"></span>
-            </div>
-
-            <div class="form-group">
-                <label asp-for="Slug" class="control-label"></label>
-                <input asp-for="Slug" class="form-control" id="blog-slug" />
-                <span asp-validation-for="Slug" class="text-danger"></span>
-            </div>
-
-            <div class="form-group">
-                <label class="form-label" asp-for="TopicId">Topic</label>
-                <select class="js-select2 form-select" id="topic-id" asp-for="TopicId" style="width: 100%;" data-placeholder="Choose topic..">
-                    <option></option>
-                    @foreach (var topic in ViewBag.Topics)
-                    {
-                        <option value="@topic.Id">@topic.Name</option>
-                    }
-                    <!-- Add dynamic options if needed -->
-                </select>
-            </div>
-
-            <div class="form group">
-                <label class="form-label">Content</label>
-                <textarea id="js-ckeditor"></textarea>
-            </div>
-            <div class="form-group" style="display:flex;justify-content:end;padding:10px 30px">
-                <div class="form-check form-check form-switch">
-                    <input asp-for="IsPublic" class="form-check-input" type="checkbox" id="flexSwitchCheckDefault" />
+            <!-- END Toggle Settings -->
+            <!-- Settings -->
+            <div id="side-content" class="d-none d-md-block push">
+                <div class="mb-0">
+                    <div class="block-content">
+                        <div class="form-check form-switch mb-2 d-flex justify-content-between ps-0">
+                            <label asp-for="IsPublic" class="form-label"></label>
+                            <input asp-for="IsPublic" class="form-check-input" type="checkbox"/>
+                        </div>
+                        <div class="mb-4">
+                            <label class="form-label" asp-for="Slug">Slug</label>
+                            <input class="form-control" asp-for="Slug">
+                        </div>
+                        <div class="mb-4">
+                            <label class="form-label" asp-for="TopicId">Topic</label>
+                            <select class="js-select2 form-select" id="topic-id" asp-for="TopicId" style="width: 100%;" data-placeholder="Choose topic..">
+                                <option></option>
+                                @foreach (var topic in ViewBag.Topics)
+                                {
+                                    <option value="@topic.Id">@topic.Name</option>
+                                }
+                            </select>
+                        </div>
+                        <div class="mb-4">
+                            <label class="form-label" asp-for="Description">Description</label>
+                            <textarea class="form-control" asp-for="Description" rows="2"></textarea>
+                        </div>
+                        <div class="mb-4">
+                            <label class="form-label" asp-for="Image">Image</label>
+                            <input type="file" id="thumbnail" asp-for="Image" class="form-control" accept="image/*" />
+                            <img id="imagePreview" class="img-thumbnail mt-2" style="display:none" />
+                        </div>
+                    </div>
                 </div>
-                <label asp-for="IsPublic" class="control-label"></label>
             </div>
-            <div class="mb-4 form-group" style="display:flex;justify-content:end;padding:10px 10px">
-                <button type="button" class="btn btn-danger" style="margin:10px"> <a asp-action="Index" style="color:white">Back to List</a></button>
-                <button type="submit" value="Create" id="btn-add-blog" class="btn btn-primary" style="margin:10px">Create Post</button>
-            </div>
-
-
+            <!-- END Settings -->
         </div>
+    </div>
+    <div class="col-md-8 col-lg-7 col-xl-9 order-md-0 bg-body-dark">
+        <!-- Main Content -->
+        <div class="content">
+            <div class="block block-rounded">
+                <div class="block-content">
+                    <div class="d-flex gap-2 mb-4">
+                        <input asp-for="Name" type="text" class="form-control" placeholder="Add Title..">
+                        <button type="submit" class="btn btn-primary">Save</button>
+                    </div>
+                    <div class="mb-4">
+                        <textarea id="js-ckeditor" name="ckeditor"></textarea>
+                    </div>
+
+
+
+                </div>
+            </div>
+        </div>
+        <!-- END Main Content -->
     </div>
 </form>
